5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1692_1880.log
== TEST (2019-05-01 21:54:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("digite um numero: "))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("março")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else(m>12):
	print("numero de mes invalido")
	
-- ERROR:
File "XXXX", line 27
    else(m>12):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:56:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("digite um numero: "))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("março")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else(m==13)and (m>=13):
	print("numero de mes invalido")
	
-- ERROR:
File "XXXX", line 27
    else(m==13)and (m>=13):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:57:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("digite um numero: "))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("março")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero de mes invalido")
	
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:57:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("digite um numero: "))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("março")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero de mes invalido")
	
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:57:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("digite um numero: "))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("março")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero de mes invalido")
	
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:57:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("digite um numero: "))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("março")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero de mes invalido")
	
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:58:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("digite um numero: "))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("março")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero de mes invalido")
	
-- EXECUTION TIME:
0.204765
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
